# TestGA

./: settings.gradle
app/src/main/cpp/: CMakeLists.txt  emapclientmanager.cpp  native-lib.cpp
app/src/main/cpp/include/: emapclientmanager.hpp  env.h  logging.h  rte_config.h
app/src/main/cpp/include/ap/: client.h
app/src/main/cpp/include/argus/: client.h
app/src/main/cpp/include/common/: config.h  protocol.h
app/src/main/cpp/include/io/: async.h  network.h  runloop.h  shmchannel.h  socket.h  stream.h  transport.h
app/src/main/cpp/include/lang/cpp/common/: traits.h
app/src/main/cpp/include/lang/cpp/crypto/: asymmetric.h  certificate.h  sslengine.h  symmetric.h
app/src/main/cpp/include/lang/cpp/io/: runloop.h  (+1 more)
app/src/main/cpp/include/legacy_report/: client.h
app/src/main/cpp/include/lib/: alloc.h  array.h  atomic.h  base64.h  buf.h  cond.h  error.h  event.h  file.h  generic.h  getoptlong.h  hash_bucket.h  hash_handle.h  hash_table.h  json.h  kvpair.h  list.h  list_node.h  module.h  mutex.h  packer.h  path.h  ptr.h  random.h  rbtree.h  reflock.h  rwlock.h  shared_event.h  shared_ptr.h  shm.h  signature.h  skiplist.h  sm.h  spinlock.h  string.h  task.h  thread.h  thread_local.h  thread_once.h  time.h  (+6 more)
app/src/main/cpp/include/macro/: align.h  ctor.h  expand.h  field.h  macros.h  mark.h
app/src/main/cpp/include/media/: audio_base.h  media_ipc_base.h  video_base.h
app/src/main/cpp/include/shim/: default.h
app/src/main/cpp/include/tds/: client.h
app/src/main/cpp/include/transport/: agtp.h
app/src/main/cpp/include/universal_report/: client.h
(+23 files in other folders)
